biografía modificada (falta media quary al final)

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -40,6 +40,10 @@
                 <span>Domingo 23 de Enero</span>
                 <h3 class="News1_title">St. Vincent comparte una playlist con los 20 temas que han inspirado su nuevo disco</h3>
                 <p class="News1_text">La compositora compartió hace unos días en Spotify una playlist en la que recopiló los temas que han inspirado en la creación del sexto LP de la de Tulsa. Soul y pop retro afloran a fuego en una lista comandada por obras de Shep & The Limelites, The Temptations, James Brown o Kid Creole And The Coconuts, además de otras protagonizadas por Madonna, The Jungle Band, Bruce Springsteen, Beyoncé, Bob Dylan, Joni Mitchell, The Beatles y Notorious B.I.G.
+                Coproducido por Jack Antonoff, «Daddy’s Home» representará un nuevo quiebro en el sonido de una artista, Annie Clark, focalizada constantemente en una progresiva mutación creativa. ‘Pay Your Way In Pain’, con un sonido cercano al de Prince en los 80, y la primaveral ‘The Melting Of The Sun’ son los otros anticipos del LP presentados hasta la fecha.
+                Además de esto, y para calentar más los motores, la compositora compartió hace unos días en Spotify una playlist en la que recopiló los temas que han inspirado en la creación del sexto LP de la de Tulsa. 
+                Soul y pop retro afloran a fuego en una lista comandada por obras de Shep & The Limelites, The Temptations, James Brown o Kid Creole And The Coconuts, además de otras protagonizadas por Madonna, The Jungle Band, Bruce Springsteen, Beyoncé, Bob Dylan, Joni Mitchell, The Beatles y Notorious B.I.G.
+
                 Coproducido por Jack Antonoff, «Daddy’s Home» representará un nuevo quiebro en el sonido de una artista, Annie Clark, focalizada constantemente en una progresiva mutación creativa. ‘Pay Your Way In Pain’, con un sonido cercano al de Prince en los 80, y la primaveral ‘The Melting Of The Sun’ son los otros anticipos del LP presentados hasta la fecha.</p>
                 <div class= "News1_media"> <img class= "newsImg" src="../images/news1.jpg" alt="news 1"> </div> 
             </div>
@@ -70,7 +74,11 @@
                 <h3 class="News4_title">St. Vincent publica un vídeo teaser de su próximo álbum, “Daddy’s Home”</h3>
                 <p class="News4_text">La norteamericana vuelve a ponerse en el centro del escenario para presentarnos un vídeo teaser con música inédita de su próximo álbum, que verá la luz el 14 de mayo.
                     Este vídeo teaser imita un anuncio de televisión retro e incluye adelantos de algunas pistas inéditas y algunas partes del sencillo principal, “Pay Your Way In Pain”, que ya publicó hace unos días y que ya cuenta con más de un millón de reproducciones en Spotify.
-                    Sobre “Daddy’s Home”, la continuación de “Masseduction”, Annie Clark explica que el LP se inspiró en dos cosas. La primera es la liberación de su padre de la cárcel por delitos de guante blanco, es decir, por delitos cometidos sin intimidación, amenazas, uso de la fuerza, armas o violencia. La segunda es su colección de vinilos de los años setenta.</p>
+                    Sobre “Daddy’s Home”, la continuación de “Masseduction”, Annie Clark explica que el LP se inspiró en dos cosas. 
+                    La primera es la liberación de su padre de la cárcel por delitos de guante blanco, es decir, por delitos cometidos sin intimidación, amenazas, uso de la fuerza, armas o violencia. La segunda es su colección de vinilos de los años setenta.
+                    Sobre el álbum Clark declaró que cuando habla de este nuevo álbum “siempre pienso en la cita de Picasso: ‘El arte es una mentira que nos hace darnos cuenta de la verdad’. Estas historias son cosas que he vivido y formas en las que me he sentido. Es difícil para mí dividir qué es qué”.
+
+                    Así pues, mientras los más fans esperan a que llegue el 14 de mayo para poder escuchar “Daddy’s Home” completo, pueden hacerse una idea con el primer single de St. Vincent, “Pay Your Way In Pain”.</p>
                 <div class="News4_media"> <img class= "newsImg" src="../images/news4.jpg" alt="News 4"></div>
             </div>
 
@@ -82,7 +90,7 @@
                     rock para entregar el potente "Pay Your Way In Pain". El tema, descripto por la
                     cantante como "un blues del 2021", se presentó con un simple pero potente 
                     videoclip donde la vemos bailando y cantando con un look al estilo Mia Wallace.</p>
-                <div class="News5_media"><iframe width="420" height="315" src="https://www.youtube.com/embed/ZUTu65AXrJw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="News5_media"><iframe width="1024" height="768" src="https://www.youtube.com/embed/ZUTu65AXrJw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             </div>
 
             <div class="News6">
@@ -97,7 +105,10 @@
                     Chords, Groove. Los días en los que la armonía y el ritmo sofisticados no 
                     sonaban embriagadores, simplemente sonaban y se sentían bien. Mucha guitarra. 
                     Pero sonidos cálidos, no distorsión y caos. Con suerte, un giro que nadie verá 
-                    venir».</p>
+                    venir»
+                    La inspiración para estas once canciones (los tracks son catorce porque también aparecen tres breves interludios de menos de un minuto) llegó a partir del recuerdo de un auténtico descalabro: la detención, hace una década, del padre de Annie, condenado posteriormente a doce años de cárcel por una maniobra ilegal en el mercado de valores. Clark conectó el recuerdo de ese trance ingrato con la música que escuchaba su papá, dueño de una colección de discos donde dominaban el doo wop -un estilo vocal nacido a partir de la unión de rhythm and blues y gospel-, el particular sonido de sitar sintetizado que fue característico en los singles de soul de la época -Freda Payne, The Stylistics- y el funk impulsado por el piano eléctrico de Stevie Wonder y Donny Hathaway (de hecho, Kenya Hathaway, hija del músico de Chicago fallecido a fines de los 70, es una de las coristas que participan en el disco).
+
+Pero fiel a su estilo, Clark rinde su personal homenaje esquivando oportunamente la solemnidad, observando ese sonido al que toma como referencia a través de una lente deformante, incorporando esos exóticos arrebatos de guitarra eléctrica que son su marca registrada y dándole espacio a su inclinación manifiesta por la teatralidad y el humor negro. También asoma la nariz Johnny, un personaje recurrente en sus canciones (chequear temas de discos anteriores como “Marry Me”, “Prince Johnny” o “Happy Birthday, Johnny”) que ha disparado todo tipo de especulaciones en los foros de discusión de sus fans..</p>
                 <div class="News6_media"> <img class= "newsImg" src="../images/news5.jpg" alt="News 5"></div>
             </div>
         
