discografia terminada (falta media quary)

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../scss/miestilo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/317ba650d5.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Fan page dedicada a St Vincent: Biografía.">
+    <meta name="keywords"  content="ST VINCENT, MÚSICA, ROCK, POP, ALTERNATIVE, BIOGRAFÍA">
     <title>St Vincent Argentina - Biografía</title>
 </head>
 <body>
