--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,37 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./scss/miestilo.css">
+    <link rel="stylesheet" href="../scss/miestilo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/317ba650d5.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Fan page dedicada a St Vincent: Contacto.">
+    <meta name="keywords"  content="ST VINCENT, MÚSICA, ROCK, POP, ALTERNATIVE, CONTACTO">
     <title>St Vincent Argentina - Contacto</title>
 </head>
 <body>
     <header>
-        <h1 class="title">St Vincent Argentina</h1>
+        <h1 class="title"> <a href="../index.html">St Vincent Argentina</a></h1>
 
-        <nav>
-            <ul class="menu container" id="mainMenu">
-                <li> 
-                    <a href="../index.html"> Home</a>
-                </li>
-                <li>
-                   <a href="novedades.html">Novedades</a> 
-                </li>
-                <li>
-                    <a href="biografia.html">Biografía</a> 
-                </li>
-                <li>
-                    <a href="discografia.html">Discografía</a>
-                </li>
-                <li>
-                    <a href="contacto.html">Contacto</a> 
-                </li>
-            </ul>
-        </nav>
+      <nav>
+          <ul class="flex-container">
+              <li>
+             <a href="../pages/novedades.html">Novedades</a> 
+              </li>
+              <li>
+              <a href="../pages/biografia.html">Biografía</a> 
+              </li>
+              <li>
+              <a href="../pages/discografia.html">Discografía</a>
+              </li>
+              <li>
+              <a href="../pages/contacto.html">Contacto</a> 
+              </li>
+          </ul>
+  </nav>
     </header>
 
     <section>
@@ -71,16 +68,16 @@
     </section>
     <br>
     <footer>
-        <p> REDES SOCIALES </p> 
-        <p class="Powered">Powered by Lucho</p> 
+        <div class="redes-container"> 
+            <ul class="redes-ul"> 
+            <li> <i class="fab fa-twitter"></i></li>
+            <li> <i class="fab fa-instagram"></i></li>
+            <li> <i class="fab fa-facebook-f"></i></li>
+            <li> <i class="fab fa-tiktok"></i></li>
+            </ul>
+        </div> 
+        <p>Powered by Lucho</p> 
     </footer>
 
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
