terminado? media quary

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -68,6 +68,7 @@
             </p>
     </div>
     </section>
+    <div class="irArriba"> <a href="#"> IR ARRIBA</a></div>
     <br>
     <footer>
         <div class="redes-container"> 
