--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -13,7 +13,7 @@
     <meta name="keywords"  content="ST VINCENT, MÚSICA, ROCK, POP, ALTERNATIVE, DISCOGRAFÍA">
     <title>St Vincent Argentina - Discografía</title>
 </head>
-<body>
+<body class="blackBackground">
     <header>
       <h1 class="title"> <a href="../index.html">St Vincent Argentina</a></h1>
 
@@ -97,10 +97,13 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <br>
           <div class="spotifyPlayer">
             <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DXaVRho4LRRkv" width="640" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
           </div>
     
+
+          <div class="irArriba"> <a href="#"> IR ARRIBA</a></div>
         
           <footer>
             <div class="redes-container"> 
