--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -36,7 +36,7 @@
     
     <div class="biographyStyle0">
         <h1 class="biographyTitle"> Annie Clark</h1>
-        <i class="biographyQuote"> "I always felt like a weirdo. ... I made a place with music where I could exist and not feel weird and alien." </i>
+        <i class="biographyQuote"> "I always felt like a weirdo. I made a place with music where I could exist and not feel weird and alien." </i>
         
         <div class="biographyPicContainer">
             <img class="biographyPic" src="../images/biography.jpg">
